# time-rs

./: Cargo.toml  rustfmt.toml
src/: application.rs  configuration_repository.rs  csv_repository.rs  main.rs  stopwatch.rs  task_record.rs  time_rs.rs
