[package]
name = "time-rs"
version = "0.1.0"
edition = "2018"
resolver = "2"
authors = ["Michael P. Moran"]

[dependencies]
chrono = "0.4.19"
csv = "1.1.6"
iced = { git = "https://github.com/iced-rs/iced", features = ["smol"] }
rust-ini = "0.17.0"
serde = { version = "1.0.130", features = ["derive"] }
